# poc-fastapi-htmx

./: .gitignore  README.md  main.py  pyproject.toml
templates/: index.html
