[project]
name = "poc-htmx-fast-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mbround18", email = "12646562+mbround18@users.noreply.github.com"},
]
dependencies = ["fastapi>=0.115.6", "uvicorn[standard]>=0.32.1", "jinja2>=3.1.4", "ruff>=0.8.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
